todo task with BOM

--- a/Mini Projects/Todo list/index.html
+++ b/Mini Projects/Todo list/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container ">
 
-        <nav class="mb-3 mt-3 pt-2 pb-2 navbar-light bg-secondary">
+        <nav class="mb-3 pt-2 pb-2 navbar-light bg-secondary">
             <h1 class="text-center navbar-brand">Todo List App</h1>
         </nav>
 
@@ -54,7 +54,13 @@
                   </table>
             </div>
         </div>
+        <div class="container pt-3 navbar-dark bg-secondary fixed-bottom">
+            <p>Created by Ervin.</p>
+        </div>
     </div>
+    
     <script src="./script.js"></script>
+    <script src="./edit.js"></script>
+    <script src="./validate.js"></script>
 </body>
 </html>
