--- a/Mini Projects/Todo list/edit.html
+++ b/Mini Projects/Todo list/edit.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container ">
 
-        <nav class="mb-3 mt-3 pt-2 pb-2 navbar-light bg-secondary">
+        <nav class="mb-3 pt-2 pb-2 navbar-light bg-secondary">
             <h1 class="text-center navbar-brand">Todo List App</h1>
         </nav>
 
@@ -23,11 +23,18 @@
                         </div>
                         <div class="text-center">
                             <button type="button" id="updatebtn" onclick = "updateTodo()" class="btn btn-primary" >Update</button>
+                            <button type="button" id="cancelbtn" onclick = "cancelTodo()" class="btn btn-primary" >Cancel</button>
                         </div>
                       </form>
                 </div>
             </div>
         </div>
-    <script src="./script.js"></script>
+        <div class="container pt-3 navbar-dark bg-secondary fixed-bottom">
+            <p>Created by Ervin.</p>
+        </div>
+    </div>
+    <script src="./edit.js"></script>
+    <script src="./update.js"></script>
+    <script src="./validate.js"></script>
 </body>
 </html>
