--- a/Local-server/API_CRUD/ASYNC&AWAIT_CRUD/JSON_Placeholder/photos/index.html
+++ b/Local-server/API_CRUD/ASYNC&AWAIT_CRUD/JSON_Placeholder/photos/index.html
@@ -12,7 +12,7 @@
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid" style="text-align: center; display: inline;">
       <a class="navbar-brand" href="#" >JSON-PlaceHolder-API(photos)</a>
-      <button type="button" class="btn btn-outline-success col" style=" width: 180px; height: 50px; display:inline;" onclick="getUsersLocalHostData()">GET DATA</button>
+      <button type="button" class="btn btn-outline-success col" style=" width: 180px; height: 50px; display:inline;" onclick="getData()">GET DATA</button>
     </div>
   </nav>
     <div class="container">
