--- a/TO-DO APP/index.html
+++ b/TO-DO APP/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./geData.js"></script>
+    <table>
+        <thead>
+            <th>Activity</th>
+            <th>Status</th>
+        </thead>
+        <tbody></tbody>
+    </table>
+    <script src ="./table.js"></script>
+    <script src="./data.js"></script>
+    
 </body>
 </html>
