started React.JS

--- a/QUIZ APP ASSIGNMENT/QUIZAPP-1/index.html
+++ b/QUIZ APP ASSIGNMENT/QUIZAPP-1/index.html
@@ -73,6 +73,7 @@
             <hr style="margin-bottom: 20px">
 
             <p id="question"></p>
+            <img id="image">
             <div class="button">
                 <button id="btn0"><span id="choice0"></span></button>
                 <button id="btn1"><span id="choice1"></span></button>
@@ -89,6 +90,6 @@
         </div>
     </div>
     <script src="./questions.js"></script>
-    <script src="./displayQuestions.js"></script>
+    <script src="./display.js"></script>
 </body>
 </html>
