Adding ReactJS Project

--- a/Javascript/Quiz_APP/index.html
+++ b/Javascript/Quiz_APP/index.html
@@ -22,13 +22,18 @@
             <button id="btn3"><span id="choice3"></span></button>
           </div>
         </div>
-        <div id="quizArea">
-
-        </div>
+        <div id="quizArea"></div>
         <hr style="margin-top: 20px" />
         <footer>
           <p id="progress">Quesion X of Y</p>
-          <button type="button" onclick="restartQuiz()" id="restart" style="display: none;">Restart Quiz</button>
+          <button
+            type="button"
+            onclick="restartQuiz()"
+            id="restart"
+            style="display: none"
+          >
+            Restart Quiz
+          </button>
         </footer>
       </div>
     </div>
