--- a/javascript/notetaking-app/details.html
+++ b/javascript/notetaking-app/details.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <style>
      body{
-       background-color: rgb(123, 100, 145);
+       background-color: rgb(179, 160, 197);
      }
      #box1{
        margin:auto;
@@ -64,13 +64,13 @@
         localStorage.setItem('todoActivites', JSON.stringify(todoActivites));
 
  
-        window.location.href = '/';
+        window.location.href = 'index.html';
       }
     </script>
-      <script src="create.js"></script>
+      <script src="./create.js"></script>
    
-      <script src="delete.js"></script>
-      <script src="view.js"></script>
+      <script src="./delete.js"></script>
+      <script src="./view.js"></script>
   
   </body>
 </html>
