--- a/javascript/notetaking-app/index.html
+++ b/javascript/notetaking-app/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
  <style>
    body{
-     background-color: cadetblue;
+     background-color: rgb(151, 187, 189);
    }
     #box{
       text-align: center;
@@ -53,10 +53,10 @@
       </thead>
       <tbody></tbody>
     </table>
-    <script src="script.js"></script>
-    <script src="create.js"></script>
-    <script src="delete.js"></script>
-    <script src="view.js"></script>
+    <script src="./script.js"></script>
+    <script src="./create.js"></script>
+    <script src="./delete.js"></script>
+    <script src="./view.js"></script>
 
 
   </body>
