--- a/javascript/todo-app/details.html
+++ b/javascript/todo-app/details.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <style>
      body{
-     background-color: cadetblue;
+     background-color: rgb(157, 201, 202);
    }
      #box1{
        margin:auto;
@@ -64,7 +64,7 @@
         localStorage.setItem('todoActivites', JSON.stringify(todoActivites));
 
  
-        window.location.href = '/';
+        window.location.href = 'index.html';
       }
     </script>
       <script src="create.js"></script>
