life cycles added

--- a/javascript/objects/objects2.html
+++ b/javascript/objects/objects2.html
@@ -21,7 +21,7 @@
 
     }
     
-    document.getElementsById(myself).innerHTML= person;
+    document.getElementById("myself").innerHTML= person.fname ;
 
       function addSkills(){
           person.skill = "developer";
