--- a/javascript/objects/objects3.html
+++ b/javascript/objects/objects3.html
@@ -15,21 +15,21 @@
         }
         console.log(amazon)
  
-        // var flipkart = new Object ({flipkart,entiteworld, 100 })
+        var flipkart = new employees ("flipkart","entiteworld", "100" )
         // {
         //     this.fname= "flipkart";
         //     this.location ="entire world";
         //     this.income =100;
         // }
-        // console.log(flipkart)
+        console.log(flipkart)
 
-        function employee(name,skill,location){
+        function employees(name,skill,location){
             this.name = name ;
             this.skill = skill;
             this.location = location 
 
         }
-        var employee = new employee ("akhil" , "dveloper", "wgl")
+        var employee = new employees ("akhil" , "dveloper", "wgl")
         console.log(employee);
     </script>
 </body>
