--- a/React JS/react_router/public/index.html
+++ b/React JS/react_router/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- theme stylesheet-->
+    <link rel="stylesheet" href="../src/css/style.default.css" id="theme-stylesheet">
+    <!-- Custom stylesheet - for your changes-->
+    <link rel="stylesheet" href="../src/css/custom.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
